easの設定追加

--- a/app.json.sample
+++ b/app.json.sample
@@ -1,7 +1,8 @@
+
 {
   "expo": {
-    "name": "react-native-expo-tutorial",
-    "slug": "react-native-expo-tutorial",
+    "name": "<プロジェクトディレクトリ名>",
+    "slug": "<プロジェクトディレクトリ名>",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./src/assets/icon.png",
@@ -24,6 +25,11 @@
     },
     "web": {
       "favicon": "./src/assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+      }
+    },
+    "owner": "<ここを変更してください>"
   }
 }
